# eps-update-devcontainer

./: .gitallowed  .pre-commit-config.yaml  Makefile  README.md  action.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/instructions/languages/: cdk.instructions.md  cloudformation.instructions.md  python.instructions.md  sam.instructions.md  typescript.instructions.md
.github/instructions/project/: instructions.md
.github/prompts/: code_review.prompt.md
.github/workflows/: ci.yml  pull_request.yml  release.yml  schedule_update_devcontainer.yml  sync_copilot.yml
release_notes/: v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.0.4.md  v1.0.5.md
