
[project]
python = "^3.14"
name = "eps-update-devcontainer"

[tool.poetry]
name = "eps-update-devcontainer"
version = "0.0.1-alpha"
description = "EPS update devcontainer"
license = "MIT"
authors = [
    "EPS"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/eps-update-devcontainer"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
